infra/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-svc
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: ticketing.dev
          http:
              paths:
                  - path: /api/users/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-svc
                            port:
                                number: 3000
                  # - path: /posts
                  #   pathType: Prefix
                  #   backend:
                  #       service:
                  #           name: query-srv
                  #           port:
                  #               number: 4002
                  # - path: /posts/?(.*)/comments
                  #   pathType: Prefix
                  #   backend:
                  #       service:
                  #           name: comments-srv
                  #           port:
                  #               number: 4001
                  # - path: /?(.*)
                  #   pathType: Prefix
                  #   backend:
                  #       service:
                  #           name: client-srv
                  #           port:
                  #               number: 3000
